--- a/MyXylophone/Base.lproj/LaunchScreen.storyboard
+++ b/MyXylophone/Base.lproj/LaunchScreen.storyboard
@@ -1,8 +1,10 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -11,15 +13,61 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="pLo-6R-loR">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rCk-6r-iSE">
+                                <rect key="frame" x="18" y="362" width="357" height="128"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="xylolable" translatesAutoresizingMaskIntoConstraints="NO" id="WRz-VO-oI3">
+                                        <rect key="frame" x="61" y="24" width="80" height="80"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="80" id="9qJ-vH-aby"/>
+                                            <constraint firstAttribute="width" constant="80" id="Sd3-nm-NZf"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MyXylophone" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9fJ-nf-3I1">
+                                        <rect key="frame" x="171" y="49" width="149" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                        <color key="textColor" red="0.32549020649999999" green="0.18039217590000001" blue="0.64705884459999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="9fJ-nf-3I1" firstAttribute="centerY" secondItem="rCk-6r-iSE" secondAttribute="centerY" id="5G9-rW-th1"/>
+                                    <constraint firstAttribute="trailing" secondItem="9fJ-nf-3I1" secondAttribute="trailing" constant="37" id="DEG-lM-FjQ"/>
+                                    <constraint firstItem="9fJ-nf-3I1" firstAttribute="leading" secondItem="WRz-VO-oI3" secondAttribute="trailing" constant="30" id="H9d-cT-tsj"/>
+                                    <constraint firstItem="WRz-VO-oI3" firstAttribute="centerY" secondItem="rCk-6r-iSE" secondAttribute="centerY" id="Lt1-mE-kP7"/>
+                                    <constraint firstAttribute="height" constant="128" id="ND9-cI-Cq2"/>
+                                    <constraint firstAttribute="width" constant="357" id="yeE-rd-Qgc"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="rCk-6r-iSE" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="JnE-nb-kJl"/>
+                            <constraint firstItem="rCk-6r-iSE" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="aqb-fE-FUo"/>
+                            <constraint firstAttribute="bottom" secondItem="pLo-6R-loR" secondAttribute="bottom" id="bPm-rw-q1U"/>
+                            <constraint firstItem="pLo-6R-loR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="cxu-6G-9x9"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="pLo-6R-loR" secondAttribute="trailing" id="lMJ-bs-gf3"/>
+                            <constraint firstItem="pLo-6R-loR" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="rcf-BI-EKp"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.671755725190835" y="374.64788732394368"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="background" width="1242" height="2688"/>
+        <image name="xylolable" width="1024" height="1024"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
