--- a/MyXylophone/Base.lproj/Main.storyboard
+++ b/MyXylophone/Base.lproj/Main.storyboard
@@ -29,8 +29,11 @@
                                                 <rect key="frame" x="10" y="0.0" width="373" height="101.66666666666667"/>
                                                 <color key="backgroundColor" red="0.91764705882352937" green="0.7803921568627451" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <color key="tintColor" red="0.32549019610000002" green="0.18039215689999999" blue="0.64705882349999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                                <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" title="C"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" title="C"/>
+                                                <connections>
+                                                    <action selector="keyPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1RN-Uh-4t1"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <constraints>
@@ -47,8 +50,11 @@
                                                 <rect key="frame" x="15" y="0.0" width="363" height="101.33333333333333"/>
                                                 <color key="backgroundColor" red="0.62745098039215685" green="0.76470588235294112" blue="0.82352941176470584" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <color key="tintColor" red="0.32549019610000002" green="0.18039215689999999" blue="0.64705882349999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                                <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" title="D"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" title="D"/>
+                                                <connections>
+                                                    <action selector="keyPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rq6-dL-bNh"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <constraints>
@@ -65,8 +71,11 @@
                                                 <rect key="frame" x="20" y="0.0" width="353" height="101.66666666666667"/>
                                                 <color key="backgroundColor" red="0.96862745098039216" green="0.96078431372549022" blue="0.92156862745098034" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <color key="tintColor" red="0.32549019610000002" green="0.18039215689999999" blue="0.64705882349999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                                <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" title="E"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" title="E"/>
+                                                <connections>
+                                                    <action selector="keyPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="D7t-Gj-39d"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <constraints>
@@ -83,8 +92,11 @@
                                                 <rect key="frame" x="25" y="0.0" width="343" height="101.66666666666667"/>
                                                 <color key="backgroundColor" red="0.91764705882352937" green="0.8784313725490196" blue="0.85490196078431369" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <color key="tintColor" red="0.32549019610000002" green="0.18039215689999999" blue="0.64705882349999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                                <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" title="F"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" title="F"/>
+                                                <connections>
+                                                    <action selector="keyPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3Of-bV-CRN"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <constraints>
@@ -101,8 +113,11 @@
                                                 <rect key="frame" x="30" y="0.0" width="333" height="101.66666666666667"/>
                                                 <color key="backgroundColor" red="0.91764705879999997" green="0.78039215689999997" blue="0.78039215689999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <color key="tintColor" red="0.32549019610000002" green="0.18039215689999999" blue="0.64705882349999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                                <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" title="G"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" title="G"/>
+                                                <connections>
+                                                    <action selector="keyPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dFO-EE-Xox"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <constraints>
@@ -119,8 +134,11 @@
                                                 <rect key="frame" x="35" y="0.0" width="323" height="101.33333333333333"/>
                                                 <color key="backgroundColor" red="0.62745098040000002" green="0.76470588240000004" blue="0.82352941180000006" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <color key="tintColor" red="0.32549019610000002" green="0.18039215689999999" blue="0.64705882349999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                                <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" title="A"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" title="A"/>
+                                                <connections>
+                                                    <action selector="keyPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cVx-Fd-ucE"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <constraints>
@@ -137,8 +155,11 @@
                                                 <rect key="frame" x="40" y="0.0" width="313" height="101.66666666666667"/>
                                                 <color key="backgroundColor" red="0.96862745100000003" green="0.96078431369999995" blue="0.92156862750000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <color key="tintColor" red="0.32549019610000002" green="0.18039215689999999" blue="0.64705882349999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                                <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" title="B"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" title="B"/>
+                                                <connections>
+                                                    <action selector="keyPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="p9O-0m-Wbe"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <constraints>
